# gt

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GT_UPDATE_GUIDE.md  INSTALL.md  LICENSE  Makefile  README.md  clippy.toml  install.sh  rust-toolchain.toml  rustfmt.toml  update_gt.sh
.cursor/rules/: development-workflow.mdc  gt-project-overview.mdc  implementation-status.mdc  testing-and-debugging.mdc
.github/workflows/: ci.yml  release.yml
src/: config.rs  github.rs  lib.rs  main.rs  ui.rs  utils.rs  workflow.rs
src/cli/: args.rs  mod.rs  router.rs
src/commands/: clean.rs  config.rs  init.rs  mod.rs  save.rs  ship.rs  sp.rs  start.rs  status.rs  update.rs
src/config/: mod.rs  repository.rs
src/error/: handler.rs  mod.rs  recovery.rs  types.rs
src/git/: add.rs  branch.rs  commit.rs  fetch.rs  mod.rs  network.rs  push.rs  remote.rs  repository.rs  reset.rs  stash.rs  status.rs
src/github/: cli.rs  mod.rs  pr.rs
src/ui/: colors.rs  mod.rs  print.rs  prompt.rs
